cmake_minimum_required(VERSION 3.16)
project(mms C)
set(FFMPEG_LIB "/usr/lib/x86_64-linux-gnu/")
set(FFMPEG__INCLUDE_LIB "/usr/include/x86_64-linux-gnu")
set(CMAKE_C_STANDARD 99)
#link_directories(${FFMPEG_LIB})
#include_directories("${FFMPEG__INCLUDE_LIB}/libavformat")
#include_directories("${FFMPEG__INCLUDE_LIB}/libavutil")

find_library(LIBAVFORMAT avformat)
find_library(LIBAVUTIL avutil)
find_library(LIBAVCODEC avcodec)
if(NOT LIBAVFORMAT)
    message(FATAL_ERROR "avformat library not found")
endif()
message(STATUS "path: ${LIBAVFORMAT}")
message(STATUS "path: ${LIBAVUTIL}")
add_executable(mms main.c video_reader.c video_reader.h)
add_library(mms_media SHARED video_reader.c video_reader.h)
target_include_directories(mms PUBLIC ${FFMPEG__INCLUDE_LIB})
target_link_libraries(mms ${LIBAVFORMAT} ${LIBAVUTIL} ${LIBAVCODEC})
target_link_libraries(mms_media ${LIBAVFORMAT} ${LIBAVUTIL} ${LIBAVCODEC})
install(TARGETS mms_media DESTINATION  /usr/lib)